[SWEP-96] 메모장 사진 업로드 및 저장 로직 개선 (#200) (#201)
* [SWEP-96] 메모장 사진 업로드 및 저장 로직 개선 (#200)

* fix: 폴더 생성 및 사진 저장 API 주석처리 + multer 미들웨어 실행 전에 폴더 ID 검사 (#202)

* [SWEP-96] 메모장 사진 업로드 및 저장 로직 개선

* [SWEP-96] 폴더 생성 및 사진 저장 API 주석처리 + multer 미들웨어 실행 전에 폴더 ID 검사

* fix: tsoa.json 폴더 생성 및 사진 저장 spec requestBody 삭제 (#203)

* [SWEP-96] 메모장 사진 업로드 및 저장 로직 개선

* [SWEP-96] 폴더 생성 및 사진 저장 API 주석처리 + multer 미들웨어 실행 전에 폴더 ID 검사

* [SWEP-96] tsoa.json 폴더 생성 및 사진 저장 spec requestBody 삭제
