# swagger/swagger.json
@@ -2703,159 +2703,6 @@
 				"parameters": []
 			}
 		},
-		"/memo/image-format/folders": {
-			"post": {
-				"operationId": "HandlerMemoFolderImageAdd",
-				"responses": {
-					"200": {
-						"description": "폴더 생성 및 사진 저장 성공 응답",
-						"content": {
-							"application/json": {
-								"schema": {
-									"$ref": "#/components/schemas/ITsoaSuccessResponse_MemoFolderImageResponseDto_"
-								},
-								"examples": {
-									"Example 1": {
-										"value": {
-											"resultType": "SUCCESS",
-											"error": null,
-											"success": {
-												"folderId": "1",
-												"folderName": "string",
-												"imageId": "1",
-												"imageUrl": "string"
-											}
-										}
-									}
-								}
-							}
-						}
-					},
-					"400": {
-						"description": "유효하지 않은 데이터 에러",
-						"content": {
-							"application/json": {
-								"schema": {
-									"$ref": "#/components/schemas/ITsoaErrorResponse"
-								},
-								"examples": {
-									"Example 1": {
-										"value": {
-											"resultType": "FAIL",
-											"success": null,
-											"error": {
-												"errorCode": "FOL-400",
-												"reason": "폴더 생성 중 오류가 발생했습니다.",
-												"data": {
-													"userId": "1",
-													"folderName": "string"
-												}
-											}
-										}
-									},
-									"Example 2": {
-										"value": {
-											"resultType": "FAIL",
-											"error": {
-												"errorCode": "PHO-400",
-												"reason": "사진 데이터가 유효하지 않습니다.",
-												"data": {
-													"reason": "저장할 사진이 없습니다."
-												}
-											},
-											"success": null
-										}
-									},
-									"Example 3": {
-										"value": {
-											"resultType": "FAIL",
-											"error": {
-												"errorCode": "MEM-400",
-												"reason": "메모 사진 추가 중 오류가 발생했습니다.",
-												"data": {
-													"folderId": "1",
-													"imageUrl": "string"
-												}
-											},
-											"success": null
-										}
-									},
-									"Example 4": {
-										"value": {
-											"resultType": "FAIL",
-											"error": {
-												"errorCode": "PHO-400",
-												"reason": "사진 데이터가 유효하지 않습니다.",
-												"data": {
-													"extension": "string"
-												}
-											},
-											"success": null
-										}
-									}
-								}
-							}
-						}
-					},
-					"409": {
-						"description": "중복 데이터 에러",
-						"content": {
-							"application/json": {
-								"schema": {
-									"$ref": "#/components/schemas/ITsoaErrorResponse"
-								},
-								"examples": {
-									"Example 1": {
-										"value": {
-											"resultType": "FAIL",
-											"success": null,
-											"error": {
-												"errorCode": "FOL-409",
-												"reason": "이미 존재하는 폴더 이름입니다.",
-												"data": {
-													"folderName": "string"
-												}
-											}
-										}
-									}
-								}
-							}
-						}
-					}
-				},
-				"description": "폴더 생성과 동시에 파일을 저장하는 API입니다.",
-				"summary": "폴더 생성 및 사진 저장 API",
-				"tags": [
-					"memo-folder-controller"
-				],
-				"security": [],
-				"parameters": [],
-				"requestBody": {
-					"required": true,
-					"content": {
-						"multipart/form-data": {
-							"schema": {
-								"required": [
-									"folderName"
-								],
-								"type": "object",
-								"properties": {
-									"folderName": {
-										"type": "string",
-										"description": "생성할 폴더 이름"
-									},
-									"image": {
-										"type": "string",
-										"format": "binary",
-										"description": "파일 업로드"
-									}
-								}
-							}
-						}
-					}
-				}
-			}
-		},
 		"/memo/image-format/folders/{folderId}": {
 			"post": {
 				"operationId": "HandlerMemoImageAdd",
